# hhunter

./: .gitignore  .gitmessage  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  slim_har.py
docs/architecture/: ARCHITECTURE.md  MONOREPO_STRUCTURE.md
docs/guides/: INSTALL.md  USAGE.md
docs/roadmap/: ROADMAP.md
src/: __init__.py  analyze_spreads.py  extract_agent_listings.py  extract_har.py  extract_subject_details.py  fetch_searchlistings.py  grid_analysis.py  grid_utils.py  hcad_app.py  hcad_ingest.py  hcad_maps.py  hcad_scores.py  hcad_screener.py  init_snapshot.py  normalize_har.py  pipeline.py  qa.py  visualize.py
templates/: hcad_dashboard.html  hcad_screener.html
tests/: test_extract_agent_listings.py  test_slim_har.py
